--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "description": "wooorm/remark plugin for review",
   "version": "0.0.5",
   "dependencies": {
+    "@types/lodash": "^4.14.44",
     "ejs": "^2.5.2",
     "js-yaml": "^3.7.0",
+    "lodash": "^4.17.2",
     "unist-util-visit": "^1.1.1"
   },
   "devDependencies": {
