--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
     "clean": "rimraf lib/*",
     "precommit": "lint-staged"
   },
+  "types": "lib/index.d.ts",
   "dependencies": {
     "@paperist/remark-crossref": "^1.0.3",
     "@paperist/remark-math": "^1.0.3",
     "@paperist/remark-table-caption": "^1.0.1",
-    "ejs": "^2.5.7",
-    "find-up": "^2.1.0",
-    "js-yaml": "^3.9.1",
-    "lodash": "^4.17.13",
-    "remark-frontmatter": "^1.1.0",
-    "unist-util-visit": "^1.1.3"
+    "ejs": "^2.6.2",
+    "find-up": "^4.1.0",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.14",
+    "remark-frontmatter": "^1.3.2",
+    "unist-util-visit": "^1.4.1"
   },
   "devDependencies": {
     "@paperist/types-remark": "^0.1.3",
-    "@types/ejs": "^2.3.33",
-    "@types/js-yaml": "^3.9.0",
-    "@types/lodash": "^4.14.71",
-    "@types/node": "^8.0.19",
+    "@types/ejs": "^2.6.3",
+    "@types/js-yaml": "^3.12.1",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^12.6.6",
     "cpx": "^1.5.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^4.0.3",
-    "npm-run-all": "^4.0.2",
-    "prettier-package-json": "^1.4.0",
-    "remark": "^8.0.0",
-    "remark-cli": "^4.0.0",
-    "rimraf": "^2.6.1",
-    "typescript": "^2.4.2"
+    "husky": "^3.0.0",
+    "lint-staged": "^9.2.0",
+    "npm-run-all": "^4.1.5",
+    "prettier-package-json": "^2.1.0",
+    "remark": "^10.0.1",
+    "remark-cli": "^6.0.1",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.5.3"
   },
   "keywords": [
     "markdown",
@@ -51,6 +52,5 @@
       "prettier-package-json --write",
       "git add"
     ]
-  },
-  "types": "lib/index.d.ts"
+  }
 }
