--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@paperist/types-remark": "^0.1.3",
     "@types/ejs": "^2.6.3",
+    "@types/find-up": "^2.1.1",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.6",
