Rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@3846masa-tmp/remark-review",
+  "name": "remark-review",
   "description": "wooorm/remark plugin for kmuto/review",
   "license": "MIT",
   "version": "0.0.0",
