--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:cp": "cpx \"src/**/!(*.ts)\" lib",
     "build:ts": "tsc",
     "clean": "rimraf lib/*",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 mocha --require espower-typescript/guess test/snapshot-test.ts",
+    "update-snapshots": "cross-env UPDATE_SNAPSHOTS=true npm run test"
   },
   "types": "lib/index.d.ts",
   "dependencies": {
@@ -30,16 +32,23 @@
     "@paperist/types-remark": "^0.1.3",
     "@types/ejs": "^2.6.3",
     "@types/find-up": "^2.1.1",
+    "@types/fs-extra": "^8.0.0",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.136",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.6",
     "cpx": "^1.5.0",
+    "cross-env": "^5.2.0",
+    "espower-typescript": "^9.0.2",
+    "fs-extra": "^8.1.0",
+    "globby": "^10.0.1",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
+    "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
+    "power-assert": "^1.6.1",
     "prettier-package-json": "^2.1.0",
-    "remark": "^10.0.1",
-    "remark-cli": "^6.0.1",
+    "remark": "^11.0.0",
     "rimraf": "^2.6.3",
     "typescript": "^3.5.3"
   },
