--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@paperist/remark-crossref": "^1.0.3",
-    "@paperist/remark-math": "^1.0.3",
-    "@paperist/remark-table-caption": "^1.0.1",
+    "@paperist/remark-caption": "^2.0.0",
+    "@paperist/remark-crossref": "^2.0.0",
+    "@paperist/remark-math": "^2.0.0",
     "ejs": "^2.6.2",
     "find-up": "^4.1.0",
     "js-yaml": "^3.13.1",
@@ -29,14 +29,15 @@
     "unist-util-visit": "^1.4.1"
   },
   "devDependencies": {
-    "@paperist/types-remark": "^0.1.3",
     "@types/ejs": "^2.6.3",
     "@types/find-up": "^2.1.1",
     "@types/fs-extra": "^8.0.0",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.136",
+    "@types/mdast": "^3.0.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.6",
+    "@types/unist": "^2.0.3",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "espower-typescript": "^9.0.2",
