--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ejs": "^2.6.2",
     "find-up": "^4.1.0",
     "js-yaml": "^3.13.1",
-    "lodash": "^4.17.14",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.defaultsdeep": "^4.6.1",
     "remark-frontmatter": "^1.3.2",
     "unist-util-visit": "^1.4.1"
   },
@@ -34,6 +35,8 @@
     "@types/fs-extra": "^8.0.0",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.136",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash.defaultsdeep": "^4.6.6",
     "@types/mdast": "^3.0.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.6",
