--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "lib"
   ],
   "scripts": {
-    "build": "npm-run-all clean -p build:*",
-    "build:cp": "cpx \"src/**/!(*.ts)\" lib",
-    "build:ts": "tsc",
+    "build": "tsc",
     "clean": "rimraf lib/*",
-    "precommit": "lint-staged",
     "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 mocha --require espower-typescript/guess test/snapshot-test.ts",
     "update-snapshots": "cross-env UPDATE_SNAPSHOTS=true npm run test"
   },
@@ -41,17 +38,13 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.6",
     "@types/unist": "^2.0.3",
-    "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "espower-typescript": "^9.0.2",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.2.0",
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "power-assert": "^1.6.1",
-    "prettier-package-json": "^2.1.0",
     "remark": "^11.0.0",
     "rimraf": "^2.6.3",
     "typescript": "^3.5.3"
@@ -60,11 +53,5 @@
     "markdown",
     "remark",
     "review"
-  ],
-  "lint-staged": {
-    "package.json": [
-      "prettier-package-json --write",
-      "git add"
-    ]
-  }
+  ]
 }
